@@ -891,3 +891,21 @@ void CRoutingZone::SetAllContactsVerified()
 		m_subZones[1]->SetAllContactsVerified();
 	}
 }
+
+bool CRoutingZone::IsAcceptableContact(const CContact *toCheck) const
+{
+	// Check if we know a contact with the same ID or IP but notmatching IP/ID and other limitations, similar checks like when adding a node to the table except allowing duplicates
+	// we use this to check KADEMLIA_RES routing answers on searches
+	CContact *duplicate = GetContact(toCheck->GetClientID());
+	if (duplicate != NULL) {
+		if (duplicate->IsIPVerified() && duplicate->GetIPAddress() != toCheck->GetIPAddress() || duplicate->GetUDPPort() != toCheck->GetUDPPort()) {
+			// already existing verified node with different IP
+			return false;
+		} else {
+			// node exists already in our routing table, that's fine
+			return true;
+		}
+	}
+	// if the node is not yet known, check if our IP limitations would hit
+	return CRoutingBin::CheckGlobalIPLimits(toCheck->GetIPAddress(), toCheck->GetUDPPort());
+}
